# aleph

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  deny.toml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  deploy.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli.rs
apps/website/: .gitignore  README.md  components.json  package.json  pnpm-lock.yaml  vitest.config.ts  wrangler.toml
apps/website/src/: app.css  fontsource.d.ts
apps/website/src/lib/: cameraCoverage.test.ts  cameraCoverage.ts  consent.svelte.ts  format.test.ts  format.ts  motion.ts  raster.ts
apps/website/src/lib/codec/: checksum.test.ts  index.ts  tiff.test.ts  tiff.ts
apps/website/src/lib/components/: Availability.svelte  Compare.svelte  Compatibility.svelte  CookieBanner.svelte  Cta.svelte  Features.svelte  Footer.svelte  FrameCompare.svelte  Hero.svelte  Inspector.svelte  MailLink.svelte  Nav.svelte  Showcase.svelte  Workflow.svelte
apps/website/src/lib/components/ui/badge/: badge.svelte  index.ts
apps/website/src/lib/components/ui/button/: button.svelte  index.ts
apps/website/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-header.svelte  card-title.svelte  card.svelte  index.ts
apps/website/src/lib/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-root.svelte  dialog-title.svelte  index.ts
apps/website/src/lib/components/ui/input/: input.svelte
apps/website/src/lib/components/ui/table/: index.ts  table-body.svelte  table-cell.svelte  table-head.svelte  table-header.svelte  table-row.svelte  table.svelte
apps/website/src/lib/components/ui/textarea/: textarea.svelte
apps/website/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/website/src/routes/compatibility/: +page.svelte
apps/website/src/routes/privacy/: +page.svelte
apps/website/static/: _headers
apps/website/static/media/: clip5.webm  showcase.webm
crates/aleph-codec/: Cargo.toml
crates/aleph-codec/benches/: codec_lossless.rs
crates/aleph-codec/src/: bitio.rs  decode.rs  encode.rs  error.rs  huffman.rs  lib.rs  marker.rs  sample.rs
crates/aleph-container/: Cargo.toml
crates/aleph-container/benches/: container_read.rs
crates/aleph-container/src/: error.rs  ifd.rs  lib.rs  makernote.rs  preview.rs  read.rs  tags.rs  value.rs  write.rs
crates/aleph-develop/: Cargo.toml
crates/aleph-develop/src/: develop.rs  lib.rs  params.rs
crates/aleph-metadata/: Cargo.toml
crates/aleph-metadata/src/: lib.rs  snapshot.rs  verify.rs
crates/aleph-orchestration/: Cargo.toml
crates/aleph-orchestration/benches/: orchestration_parallel.rs
crates/aleph-orchestration/src/: compress.rs  error.rs  frames.rs  lib.rs  offload.rs  pipeline.rs  sample.rs  snapshot.rs  verify.rs
crates/aleph-orchestration/tests/: real_cinemadng.rs  real_dng.rs
crates/aleph-wasm/: Cargo.toml
crates/aleph-wasm/demo/: index.html
crates/aleph-wasm/src/: lib.rs
design/: style.ai
docs/: brand.md  monetization.md
fixtures/A001_001/: A001_001_20260601_000001.DNG  A001_001_20260601_000002.DNG  A001_001_20260601_000003.DNG
