[workspace]
members = [
    "crates/aleph-codec",
    "crates/aleph-container",
    "crates/aleph-metadata",
    "crates/aleph-orchestration",
    "apps/cli",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
authors    = ["Robert Harink <robert@fulljoin.nl>"]
license    = "UNLICENSED"
repository = "https://github.com/rharink/aleph"

# ── Shared dependency versions ────────────────────────────────────────────────

[workspace.dependencies]
# Internal crates
aleph-codec         = { path = "crates/aleph-codec" }
aleph-container     = { path = "crates/aleph-container" }
aleph-metadata      = { path = "crates/aleph-metadata" }
aleph-orchestration = { path = "crates/aleph-orchestration" }

# Error handling
thiserror = "2"
miette    = { version = "7", features = ["fancy"] }

# Parallelism
rayon = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Checksums
blake3 = "1"

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# ── Workspace-wide lint policy ────────────────────────────────────────────────

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# ── Profiles ──────────────────────────────────────────────────────────────────

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "debuginfo"

[profile.bench]
inherits = "release"
debug    = true
