[package]
name        = "aleph-wasm"
description = "Browser (WASM) bindings — in-browser DNG compression trial"
publish     = false
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# This crate intentionally does NOT use `[lints] workspace = true`. The workspace
# forbids `unsafe_code`, but wasm-bindgen's generated glue contains `unsafe`. This
# is a thin binding shim — every codec/container/metadata operation lives in the
# core crates, which keep the forbid. Clippy's correctness group still applies;
# the stylistic `pedantic` tier is relaxed for generated-binding ergonomics.
[lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
aleph-container     = { workspace = true }
aleph-develop       = { workspace = true }
# Direct path dep (not `workspace = true`): a workspace dependency whose
# definition omits `default-features` ignores a consumer's `default-features =
# false`. We need the no-native core here (no rayon/blake3/threads on wasm).
aleph-orchestration = { path = "../aleph-orchestration", default-features = false }
wasm-bindgen        = "=0.2.118"
